# On-Voice

./: .gitattributes  .gitignore  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  epic-template.md  issue-template.md
.github/workflows/: code_review.yml
DyanmicIsland/: Info.plist
DyanmicIslandExtension/: DyanmicIslandExtensionControl.swift
OnVoice/: Info.plist
OnVoice/Application/: AppDelegate.swift  ContentView.swift
OnVoice/Model/: AnalysisModels.swift  Situation.swift  SpeechRecognition.swift
OnVoice/Resource/: Color+.swift  VoicePitchButton.swift
OnVoice/Service/: AppleSpeechTranscriptionService.swift  NoiseMeter.swift  PronunciationAssessmentService.swift  SpeechAnalysisService.swift  SpeechAnalyzer.swift
OnVoice/View/: AnalysisSummaryView.swift  ChartView.swift  FeedbackView.swift  HomeView.swift  RecordingAnalysisView.swift  SentenceDetailView.swift  VoicePitchView.swift
OnVoice/ViewModel/: RecordingAnalysisViewModel.swift
SpeakUP/Application/: AppDelegate.swift  ContentView.swift  SpeakUPApp.swift
SpeakUP/Model/: Situation.swift  SpeechRecognition.swift
SpeakUP/Resource/: Color+.swift  RoundedCorner.swift  VoicePitchButton.swift
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/tests/: test_review_output_parser.py
docs/: git_convention.md  project-overview.md  pronunciation-analysis-summary-handoff.md  pronunciation-error-script-handoff.md  voice-pitch-guide-bottom-sheet.md  whisper-model-setup.md
frontend/: README.md
(+141 files in other folders)
